WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200822
LocalStorageDatabase does not need to subclass ThreadSafeRefCounted
https://bugs.webkit.org/show_bug.cgi?id=200822
Summary
LocalStorageDatabase does not need to subclass ThreadSafeRefCounted
Chris Dumez
Reported
2019-08-16 12:57:12 PDT
LocalStorageDatabaseTracker does not need to subclass ThreadSafeRefCounted, it is only ref'd / deref'd by the StorageArea on the com.apple.WebKit.WebStorage serial WorkQueue, and in LocalStorageDatabase::scheduleDatabaseUpdate() on the same WorkQueue.
Attachments
Patch
(2.83 KB, patch)
2019-08-16 12:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.82 KB, patch)
2019-08-16 13:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-16 12:58:16 PDT
Created
attachment 376519
[details]
Patch
Geoffrey Garen
Comment 2
2019-08-16 13:03:05 PDT
Comment on
attachment 376519
[details]
Patch r=me
Chris Dumez
Comment 3
2019-08-16 13:13:23 PDT
Created
attachment 376526
[details]
Patch
WebKit Commit Bot
Comment 4
2019-08-16 13:56:06 PDT
Comment on
attachment 376526
[details]
Patch Clearing flags on attachment: 376526 Committed
r248794
: <
https://trac.webkit.org/changeset/248794
>
WebKit Commit Bot
Comment 5
2019-08-16 13:56:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-08-16 13:57:18 PDT
<
rdar://problem/54406074
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug