LocalStorageDatabase does not need to subclass ThreadSafeRefCounted https://bugs.webkit.org/show_bug.cgi?id=200822

Reviewed by Geoff Garen.

LocalStorageDatabase does not need to subclass ThreadSafeRefCounted, it is only ref'd / deref'd by the StorageArea
on the com.apple.WebKit.WebStorage serial WorkQueue, and in LocalStorageDatabase::scheduleDatabaseUpdate() on the
same WorkQueue.

* NetworkProcess/WebStorage/LocalStorageDatabase.cpp:
(WebKit::LocalStorageDatabase::LocalStorageDatabase):
(WebKit::LocalStorageDatabase::~LocalStorageDatabase):
* NetworkProcess/WebStorage/LocalStorageDatabase.h:


Canonical link: https://commits.webkit.org/214568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248794 268f45cc-cd09-0410-ab3c-d52691b4dbfc