Source/WebKit/NetworkProcess/WebStorage/LocalStorageDatabase.h
@@ -29,8 +29,7 @@
 #include <WebCore/SecurityOriginData.h>
 #include <wtf/Forward.h>
 #include <wtf/HashMap.h>
-#include <wtf/RefPtr.h>
-#include <wtf/ThreadSafeRefCounted.h>
+#include <wtf/RefCounted.h>
 #include <wtf/WorkQueue.h>
 
 namespace WebCore {
@@ -43,7 +42,7 @@ namespace WebKit {
 
 class LocalStorageDatabaseTracker;
 
-class LocalStorageDatabase : public ThreadSafeRefCounted<LocalStorageDatabase> {
+class LocalStorageDatabase : public RefCounted<LocalStorageDatabase> {
 public:
     static Ref<LocalStorageDatabase> create(Ref<WorkQueue>&&, Ref<LocalStorageDatabaseTracker>&&, const WebCore::SecurityOriginData&);
     ~LocalStorageDatabase();
